@@ -5,7 +5,7 @@ use Config;
 &check_kit;
 
 my $libdir; my $man1dir; my $man3dir; my $comment; my $perlbin;
-my $version = '1.18';
+my $version = '1.19';
 ($libdir, $man1dir, $man3dir) = &defaults();
 
 if (! -t STDIN) {  # not interactive, use defaults ...
@@ -218,10 +218,10 @@ sub check_kit {
 
 	my %file_sizes = (
 		'README', 2836,
-		'Changes', 712,
+		'Changes', 819,
 		'MANIFEST', 121,
-		'Clui.pm', 32190,
-		'Clui/FileSelect.pm', 8947,
+		'Clui.pm', 32194,
+		'Clui/FileSelect.pm', 8832,
 		'examples/test_script', 6609,
 	);
 
